; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_flirt.c_read_byte.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_flirt.c_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buf_eof = common dso_local global i32 0, align 4
@buf_err = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @read_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_byte(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %4, align 4
  %6 = load i32, i32* @buf_eof, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @buf_err, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %1
  store i32 0, i32* %2, align 4
  br label %27

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @r_buf_read(i32* %13, i32* %4, i32 1)
  store i32 %14, i32* %5, align 4
  %15 = icmp ne i32 %14, 1
  br i1 %15, label %16, label %25

16:                                               ; preds = %12
  %17 = load i32, i32* %5, align 4
  %18 = icmp eq i32 %17, -1
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 1, i32* @buf_err, align 4
  br label %20

20:                                               ; preds = %19, %16
  %21 = load i32, i32* %5, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 1, i32* @buf_eof, align 4
  br label %24

24:                                               ; preds = %23, %20
  store i32 0, i32* %2, align 4
  br label %27

25:                                               ; preds = %12
  %26 = load i32, i32* %4, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %24, %11
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @r_buf_read(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
